# WhaleSpotting-Python

./: .env-template  README.md  alembic.ini  pyproject.toml
app/: __init__.py  config.py
app/models/: role.py  user.py  user_role.py
app/static/: app.css
app/templates/: admin.html  index.html  layout.html  members.html  navbar.html
app/templates/flask_user/: README.md  login.html  register.html
migrations/: env.py
migrations/versions/: b628bf37cbe1_.py
